trying to get items to store and create button

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
     <header>
-        <h1>Weather Dashboard</h1>
+        <h1>Gday Mate - True Blue Weather</h1>
     </header>
 
     <main>
         <section class="row" class="search-column">
             <div class="col-md-4">
                 <form class="col-md" class="form-group">
-                    <h2>Search for a City:</h2>
+                    <h2>Search an Aussie City:</h2>
                     <input type="search" class="form-control" id="searchArea" aria-describedby="search"
                         placeholder="Search ...">
                     <button type="submit" class="btn btn-dark" id="searchBtn"><i class="fas fa-search"></i></button>
