--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
                     </div>
 
                     <div class="row" class="col-md-8">
-                        <div class="card" class="card-body">
-                            <div id="searchResults"></div>
+                        <div class="card" class="results">
+                            <div class="card-body">
+                                <div class="card bg-light">
+                                    <div id="searchResults"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
