Alignment issues for cards, 5-day forecast loops through 5 days now

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                 </form>
 
             </div>
-            <div class="forecasts">
+            <div class="col-md-8 forecasts">
 
-                <div class="row" class="col-md-8">
-                    <div class="card" class="results">
+                <div class="row">
+                    <div class="results">
                         <div class="card-body">
                             <div class="card bg-light">
                                 <div id="searchResults"></div>
@@ -40,15 +40,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            </div>
-            <div>
-                <div class="col-md-12">
-                    <div id="5DayForecast" class="fiveDayForecasts"></div>
+                <div class="row fiveDayForecasts" id="5DayForecast">
                 </div>
             </div>
-        </section>
 
+
+        </section>
 
     </main>
 </body>
