--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         placeholder="Search ...">
                     <button type="submit" class="btn btn-dark" id="searchBtn"><i class="fas fa-search"></i></button>
                     <div id="prevSearchBtns"></div>
+                    <button class="btn btn-dark" id="clearHistory">Clear History</button>
                 </form>
 
             </div>
